///////////////////////////////////////////////////////////
//  IUnit.cs
//  Implementation of the Interface IUnit
//  Generated by Enterprise Architect
//  Created on:      09-Okt-2024 08:14:27
//  Original author: vistmm
///////////////////////////////////////////////////////////

using System;
using System.Collections.Generic;
using System.Text;
using System.IO;



public interface IUnit  {

}//end IUnit